force-app/main/default/objects/Depot_Area_User__c/Depot_Area_User__c.object-meta.xml
<CustomObject>
    <description>StarTrack: Capture depot area user</description>
    <label>Depot Area User</label>
    <nameField>
        <label>Depot Area User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depot Area User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>