force-app/main/default/objects/Depot_Area_User__c/fields/Depot_Role__c.field-meta.xml
<CustomField>
    <fullName>Depot_Role__c</fullName>
    <description>StarTrack: Capture depot role for depot role person</description>
    <label>Depot Area</label>
    <referenceTo>Depot_Area__c</referenceTo>
    <relationshipLabel>Depot Area User</relationshipLabel>
    <relationshipName>Depot_Role_Persons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>