force-app/main/default/objects/Depot_Area_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>StarTrack: Capture user information for depot role person</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depot_Role_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>