force-app/main/default/objects/Depot_Area_User__c/listViews/Otto_Operations_Areas.listView-meta.xml
<ListView>
    <fullName>Otto_Operations_Areas</fullName>
    <columns>NAME</columns>
    <columns>Depot_Role__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Otto</value>
    </filters>
    <label>Otto Operations Areas</label>
</ListView>